--- a/smth.css
+++ b/smth.css
@@ -5,10 +5,7 @@ body{
 h1{
     text-align: center;
     color: rgb(11, 60, 103);
-    font-size: 30px
-}
-#toate{
-    text-align: center;
+    font-size: 4em;
 }
 button{
     border-radius: 30px;
@@ -16,6 +13,8 @@ button{
     color: aliceblue;
     background-color: coral;
     cursor: pointer;
+    margin-top: 0.5em;
+    font-size: 3em;
 }
 button:hover{
     background-color: green;
@@ -23,11 +22,12 @@ button:hover{
 div{
     text-align: center;
     background-color: rgb(3, 82, 99);
-    margin-left: 130px;
-    margin-right: 130px;
-    font-size: 20px;
-    padding-bottom: 20px;
-    padding-top: 3px;
+    margin:3em;
+    display: inline-flexbox;
+    padding: 1.5em;
+}
+h2{
+    font-size:4em;
 }
 #text{
     text-align: center;
@@ -36,11 +36,8 @@ div{
 
 }
 
+
 input{
-    font-size-adjust: inherit;
-}
-
-#toate{
-    padding: 20px;
-
+    padding: 0.5em;
+    font-size:3em;
 }
